remove Notifications "Unread" dropdown overlap fix

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -63,13 +63,6 @@ div.markdown-body {
 	min-height: 2em !important;
 }
 
-/* Notifications "Unread" dropdown  overlap (Safari, Mobile) */
-/* Info: https://github.com/refined-github/refined-github/issues/7959 */
-/* Test: https://github.com/notifications */
-#dialog-show-notifications-tabs-nav ~ action-menu {
-	flex-shrink: 0;
-}
-
 /* TODO: drop in October 2026 */
 /* Notifications "Group by" button unnecessary space */
 /* Info: https://github.com/refined-github/refined-github/pull/8208 */
